# ChangeLog for dev-libs/poppler-qt3
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/poppler-qt3/ChangeLog,v 1.18 2009/10/18 14:08:49 loki_val Exp $

*poppler-qt3-0.12.1 (18 Oct 2009)

  18 Oct 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-qt3-0.12.1.ebuild:
  Bump to 0.12.1

*poppler-qt3-0.12.0 (09 Sep 2009)

  09 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-qt3-0.11.0.ebuild, -poppler-qt3-0.11.3.ebuild,
  +poppler-qt3-0.12.0.ebuild:
  Bump to 0.12.0

*poppler-qt3-0.11.3 (22 Aug 2009)

  22 Aug 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-qt3-0.11.1.ebuild, +poppler-qt3-0.11.3.ebuild:
  Bump for 0.12 RC1

  09 Aug 2009; nixnut <nixnut@gentoo.org> poppler-qt3-0.10.7.ebuild:
  ppc stable #272980

  17 Jul 2009; Raúl Porcel <armin76@gentoo.org> poppler-qt3-0.10.7.ebuild:
  ia64/sparc stable wrt #272980

  06 Jul 2009; Brent Baude <ranger@gentoo.org> poppler-qt3-0.10.7.ebuild:
  Marking poppler-qt3-0.10.7 ppc64 stable for bug 272980

*poppler-qt3-0.11.1 (19 Jun 2009)

  19 Jun 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-qt3-0.11.1.ebuild:
  Bump

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  poppler-qt3-0.10.7.ebuild:
  Stable on alpha, bug #272980

  11 Jun 2009; Markus Meier <maekke@gentoo.org> poppler-qt3-0.10.7.ebuild:
  amd64 stable, bug #272980

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> poppler-qt3-0.10.7.ebuild:
  Stable for HPPA (bug #272980).

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  poppler-qt3-0.10.7.ebuild:
  stable x86, bug 272980

*poppler-qt3-0.10.7 (17 May 2009)

  17 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-qt3-0.10.7.ebuild:
  Bump

*poppler-qt3-0.11.0 (12 May 2009)

  12 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-qt3-0.11.0.ebuild:
  Bump for poppler-0.11.0

  19 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-qt3-0.10.5.ebuild:
  Punt for bug 266775
